ui: Fix .break-all on Firefox

--- a/client/styl/style.styl
+++ b/client/styl/style.styl
@@ -84,6 +84,7 @@ html
   flex 1
 
 .break-all
+  word-wrap break-word
   word-break break-all
 
 // Component
